# bess-desk

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  conftest.py  pyproject.toml
bess_desk/: __init__.py  cli.py
bess_desk/agents/: __init__.py  analyst.py  ceo.py  da_strategist.py  fcr_strategist.py  forecaster.py  head_of_trading.py  reporter.py  risk_officer.py
bess_desk/company/: __init__.py  agent.py  approvals.py  budget.py  heartbeat.py  tickets.py
bess_desk/execution/: __init__.py  battery.py  bidder.py  dispatcher.py  optimizer.py  pnl.py  risk.py
bess_desk/llm/: __init__.py  client.py
bess_desk/markets/: __init__.py  base.py  replay.py  sim.py
dashboard/: app.py
docs/: ARCHITECTURE.md
examples/: 00_hello_desk.py
tests/: test_smoke.py
