[project]
name = "bess-desk"
version = "0.1.0"
description = "Open-source orchestration for a zero-human battery trading desk"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sumit" }]

dependencies = [
    # Core
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",

    # Optimization
    "cvxpy>=1.5",
    "highspy>=1.7",

    # LLM clients
    "anthropic>=0.40",
    "openai>=1.50",

    # Scheduling
    "apscheduler>=3.10",

    # Dashboard
    "streamlit>=1.38",
    "plotly>=5.22",

    # CLI
    "typer>=0.12",
    "rich>=13.7",

    # Persistence
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
live = [
    "entsoe-py>=0.6",
    "httpx>=0.27",
]

[project.scripts]
bess-desk = "bess_desk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bess_desk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
